# QT_cmake_library_template

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  NamenErsetzen.txt  README.md  build.bat  utility.cmake
.claude/: ISSUES.md  PROJECT_STATUS.md  TASKS.md  settings.json
.claude/ProjectManager/: CODING_STYLE.md  DECISIONS.md  FINISHED_TASKS.md  GLOSSARY.md  PREFERENCES.md  PROJECT_SUMMARY.md
.claude/ProjectManager/agents/: api-docs.md  code-review.md  dep-security-audit.md  migration.md  performance.md  user-docs.md
Examples/: CMakeLists.txt  ExampleMaster.cmake
Examples/LibraryExample/: CMakeLists.txt  main.cpp
changelogs/: 1.7.0.md
cmake/: ExampleMaster.cmake  QtLocator.cmake  dependencies.cmake  utility.cmake
core/: CMakeLists.txt
core/inc/: LibraryName.h  LibraryNameInfo.h  LibraryNameShort_base.h  LibraryNameShort_debug.h  LibraryNameShort_global.h  LibraryName_base.h  LibraryName_debug.h  LibraryName_global.h  LibraryName_info.h  LibraryName_version.h.in  MyClass.h
core/src/: LibraryNameInfo.cpp  LibraryName_debug.cpp  LibraryName_info.cpp  MyClass.cpp
dependencies/: AppSettings.cmake  CommandLineParser.cmake  CrashReport.cmake  DbgHelp.cmake  DependencyTemplate.cmake  DomainDrivenDesign.cmake  EASTL.cmake  FastNoiseLite.cmake  ImGuiSFML.cmake  JsonDatabase.cmake  LicenseManager.cmake  Logger.cmake  MatlabAPI.cmake  NeuralNet.cmake  OpenSSL.cmake  OpenXLSX.cmake  QSFML_EditorWidget.cmake  RibbonWidget.cmake  SFML.cmake  SQLiteWrapper.cmake  TaskGraph.cmake  UnitTest.cmake  VariantTable.cmake  easy_profiler.cmake  order.cmake  ribbonWidget.cmake
dependencies/Neuer Ordner/: DependencyTemplate.cmake  easy_profiler.cmake
documentation/: CommonProblems.md  ConfigureTheProject.md  CoreFolder.md  CreateLibraryManually.md  Dependencies.md  EasyProfilerIntegration.md  ExamplesFolder.md  HowToUse.md  HowToUseALibrary.md  ImplementingYourOwnCode.md  LoggerIntegration.md  ModifyingTheProject.md  SetupEnviroment.md  UnitTestsFolder.md  coreFolder.md  dependencies.md  examplesFolder.md  generalInfoForSourceFiles.md  loggerIntegration.md  unitTestsFolder.md
qtModules/: AxBase.json  AxContainer.json  AxServer.json  Core.json  Designer.json  Gui.json  Help.json  Multimedia.json  MultimediaWidgets.json  Network.json  OpenGL.json  Script.json  ScriptTools.json  Sql.json  Svg.json  Test.json  UiTools.json  WebKit.json  WebKitWidgets.json  Widgets.json  Xml.json  XmlPatterns.json  Zlib.json
unitTests/: CMakeLists.txt  UnitTest.cmake
unitTests/ExampleTest/: CMakeLists.txt  main.cpp  test.cpp  test.h
unitTests/ExampleTest/tests/: TST_simple.h
unitTests/UnitTest1/: CMakeLists.txt  main.cpp
